--- a/card/pom.xml
+++ b/card/pom.xml
@@ -97,10 +97,10 @@
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
-				<version>3.4.4</version>
+				<version>3.4.2</version>
 				<configuration>
 					<to>
-						<image>bank/${project.name}:v1</image>
+						<image>easybank/${project.name}:v1</image>
 					</to>
 				</configuration>
 			</plugin>
