--- a/loan/pom.xml
+++ b/loan/pom.xml
@@ -81,7 +81,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>bank/${project.name}:v1</name>
+						<name>easybank/${project.name}:v1</name>
 					</image>
 				</configuration>
 			</plugin>
