--- a/card/pom.xml
+++ b/card/pom.xml
@@ -100,7 +100,7 @@
 				<version>3.4.2</version>
 				<configuration>
 					<to>
-						<image>easybank/${project.name}:v1</image>
+						<image>ahilachokkalingam/${project.name}:v1</image>
 					</to>
 				</configuration>
 			</plugin>
