--- a/card/src/main/resources/application.yml
+++ b/card/src/main/resources/application.yml
@@ -14,3 +14,19 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+  config:
+    import:
+      - "application_prod.yml"
+      - "application_qa.yml"
+  profiles:
+    active:
+      - "qa"
+
+cards:
+  message: "Welcome to EazyBank cards manager Info local "
+  contactDetails:
+    name: "Dragos Lech - Assistant Manager"
+    email: "dragos@eazybank.com"
+  onCallSupport:
+    - (412) 419-3491
+    - (915) 382-1932
