--- a/api-gateway/accounts/src/main/resources/application.yml
+++ b/api-gateway/accounts/src/main/resources/application.yml
@@ -25,9 +25,17 @@ management:
     web:
       exposure:
         include: "*"
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
   endpoint:
     shutdown:
       access: unrestricted
+    health:
+      probes:
+        enabled: true
   info:
     env:
       enabled: true
@@ -47,3 +55,9 @@ info:
     name: accounts MS
     description: account informations for easy bank
     version: 1.0.0
+
+logging:
+  level:
+    com:
+      bank:
+        accounts: DEBUG
