--- a/api-gateway/gatewayserver/gatewayserver/pom.xml
+++ b/api-gateway/gatewayserver/gatewayserver/pom.xml
@@ -64,7 +64,12 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -89,7 +94,7 @@
 				<version>3.4.2</version>
 				<configuration>
 					<to>
-						<image>ahilachokkalingam/${project.artifactId}:v1</image>
+						<image>ahilachokkalingam/${project.artifactId}:v2</image>
 					</to>
 				</configuration>
 			</plugin>
