--- a/api-gateway/loan/pom.xml
+++ b/api-gateway/loan/pom.xml
@@ -116,7 +116,7 @@
 				<version>3.4.2</version>
 				<configuration>
 					<to>
-						<image>ahilachokkalingam/${project.artifactId}:s6</image>
+						<image>ahilachokkalingam/${project.artifactId}:v2</image>
 					</to>
 				</configuration>
 			</plugin>
