--- a/Resilience/docker-compose/default/docker-compose.yml
+++ b/Resilience/docker-compose/default/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+  redis:
+    image: "ahilachokkalingam/redis:v3"
+    container_name: "redis-ms"
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      timeout: 5s
+      retries: 10
+    extends:
+      file: common-fields.yml
+      service: network-config
   configserver:
     image: "ahilachokkalingam/configserver:v2"
     container_name: "configserver-ms"
@@ -108,6 +120,13 @@ services:
         condition: service_healthy
       loan:
         condition: service_healthy
+      redis:
+        condition: service_healthy
+    environment:
+      SPRING_DATA_REDIS_CONNECT-TIMEOUT: 2s
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+      SPRING_DATA_REDIS_TIMEOUT: 1s
 networks:
   easybank:
     driver: "bridge"
